github link added

--- a/development.html
+++ b/development.html
@@ -62,7 +62,7 @@
         <p>The entire application was made using React Native. To store information like symptoms and treatments we used the
             Realm database.
             Realm is an offline-first database that stores information fast and locally on your device.</p>
-        <p>Link to our <a href="#">GitHub Repo</a></p>
+        <p>Link to our <a href="https://github.com/stewartkr/Symply">GitHub Repo</a></p>
     </div>
     <footer class="footer">
         <div class="footer-content">
