video added to dev page

--- a/development.html
+++ b/development.html
@@ -19,8 +19,12 @@
         </ul>
     </nav>
     <div class="wrapper">
-        <h1>Current Implementation</h1>
-        <div class="video">Video Placeholder</div>
+        <h1>Current Implementation Demo</h1>
+        <div class="video">
+            <span class="video-player"><iframe width="560" height="315" src="https://www.youtube.com/embed/Gx6wQtNVl1w" frameborder="0"
+                allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></span>
+        </div>
+        <h1>Symply's Features</h1>
         <div class="card-container">
             <div class="card">
                 <div class="feature-image">
@@ -62,7 +66,7 @@
         <p>The entire application was made using React Native. To store information like symptoms and treatments we used the
             Realm database.
             Realm is an offline-first database that stores information fast and locally on your device.</p>
-        <p>Link to our <a href="https://github.com/stewartkr/Symply">GitHub Repo</a></p>
+        <p>Link to our <a href="#">GitHub Repo</a></p>
     </div>
     <footer class="footer">
         <div class="footer-content">
